--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^5.3.1",
     "openai": "^3.3.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^16.12.0",
+    "react-openai-api": "^1.0.2",
     "react-scripts": "3.4.0"
   },
   "scripts": {
